[MVP] [Styling] FIx genre alignment

--- a/src/styles/MovieModal.css
+++ b/src/styles/MovieModal.css
@@ -40,6 +40,8 @@ h2 {
     border-radius: 5px;
     font-size: 14px;
     box-shadow: 0 0 2px rgb(0,0,0,0.2);
+    display: flex;
+    align-items: center;
 }
 
 .movie-container {
